# saas-share-drive-bootstrapper

./: CHANGELOG.md  Cargo.toml  README.md  schema.json
.github/workflows/: README.md  ci.yml  release.yml
examples/generic-saas/input/: sample_schema.json
examples/generic-saas/output/: README.md
examples/generic-saas/output/01_Administrative/: README.md
examples/generic-saas/output/01_Administrative/Finance_and_Accounting/: README.md
examples/generic-saas/output/01_Administrative/HR_and_People/: README.md
examples/generic-saas/output/01_Administrative/Legal_Documents/: README.md
examples/generic-saas/output/02_Product/: README.md
examples/generic-saas/output/02_Product/Product_Design/: README.md
examples/generic-saas/output/02_Product/Product_Requirements/: README.md
examples/generic-saas/output/02_Product/Product_Strategy/: README.md
examples/generic-saas/output/03_Engineering/: README.md
examples/generic-saas/output/04_Sales_and_Marketing/: README.md
examples/generic-saas/output/05_Data_and_Analytics/: README.md
examples/generic-saas/output/06_Operations/: README.md
examples/generic-saas/output/07_Internal_Communications/: README.md
examples/generic-saas/output/08_Projects/: README.md
examples/generic-saas/output/09_Archives/: README.md
scripts/: README.md  release.sh
src/: cli.rs  error.rs  generator.rs  lib.rs  main.rs  markdown_generator.rs  models.rs  validator.rs
tests/: cli_tests.rs  fixture_tests.rs  markdown_fixture_tests.rs  markdown_tests.rs  regeneration_test.rs  schema_validation_tests.rs
(+91 files in other folders)
