[package]
name = "saas-share-drive-bootstrapper"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to bootstrap shared network storage for SaaS companies"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5.32", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
jsonschema = "0.29.0"
markdown = "1.0.0-alpha.23"
chrono = "0.4"
walkdir = "2.3"
log = "0.4"
env_logger = "0.11.7"
