[package]
name = "aidir"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to bootstrap AI-ready directory structures for startups and organizations"
authors = ["Michael Edelman <mike.edelman@gmail.com>"]
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/fortai-legal/aidir"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5.32", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
jsonschema = "0.29.0"
markdown = "0.3.0"
chrono = "0.4"
walkdir = "2.3"
log = "0.4"
env_logger = "0.11.7"

[dev-dependencies]
tempfile = "3.10.1"
assert_fs = "1.1.1"
predicates = "3.1.0"
assert_cmd = "2.0.14"
test-case = "3.3.1"
mockall = "0.13.1"
rstest = "0.25.0"
